tests/src/frontend/expand/invalid/bad_global_class_type.sk
class Foo {
  type .TBad = Int;
}
